force-app/main/default/objects/Expense_Line_Item__c/fields/Amount_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Formula__c</fullName>
    <formula>Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>