force-app/main/default/objects/Expense_Line_Item__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Delhi NCR</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Bangalore</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Mohali</fullName>
            </value>
            <value>
                <fullName>Chandigarh</fullName>
            </value>
            <value>
                <fullName>Kolkata</fullName>
            </value>
            <value>
                <fullName>Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Amaravati</fullName>
            </value>
            <value>
                <fullName>Itanagar</fullName>
            </value>
            <value>
                <fullName>Dispur</fullName>
            </value>
            <value>
                <fullName>Patna</fullName>
            </value>
            <value>
                <fullName>Naya Raipur</fullName>
            </value>
            <value>
                <fullName>Panaji</fullName>
            </value>
            <value>
                <fullName>Shimla</fullName>
            </value>
            <value>
                <fullName>Ranchi</fullName>
            </value>
            <value>
                <fullName>Thiruvananthapuram</fullName>
            </value>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Imphal</fullName>
            </value>
            <value>
                <fullName>Shillong</fullName>
            </value>
            <value>
                <fullName>Aizawl</fullName>
            </value>
            <value>
                <fullName>Kohima</fullName>
            </value>
            <value>
                <fullName>Bhubaneswar</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
            </value>
            <value>
                <fullName>Gangtok</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Dehradun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>