force-app/main/default/objects/Expense_Line_Item__c/fields/Currency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Currency_Formula__c</fullName>
    <formula>&apos;sd&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>