force-app/main/default/objects/Expense_Line_Item__c/fields/Distance_Travelled_Formula__c.field-meta.xml
<CustomField>
    <fullName>Distance_Travelled_Formula__c</fullName>
    <formula>123</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance Travelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>