force-app/main/default/objects/Expense_Line_Item__c/fields/Entertainment_Type__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Type__c</fullName>
    <label>Entertainment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>