force-app/main/default/objects/Expense_Line_Item__c/fields/Entertainment_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Type_Formula__c</fullName>
    <formula>Entertainment_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entertainment Type</label>
    <type>Text</type>
</CustomField>