force-app/main/default/objects/Expense_Line_Item__c/fields/Exceptional_Expense__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exceptional Expense</label>
    <type>Checkbox</type>
</CustomField>