force-app/main/default/objects/Expense_Line_Item__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <formula>&apos;text&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Type</label>
    <type>Text</type>
</CustomField>