force-app/main/default/objects/Expense_Line_Item__c/fields/Finished_At__c.field-meta.xml
<CustomField>
    <fullName>Finished_At__c</fullName>
    <label>Finished At</label>
    <type>TextArea</type>
</CustomField>