force-app/main/default/objects/Expense_Line_Item__c/fields/Location_Formula__c.field-meta.xml
<CustomField>
    <fullName>Location_Formula__c</fullName>
    <formula>Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>