force-app/main/default/objects/Expense_Line_Item__c/fields/Started_From__c.field-meta.xml
<CustomField>
    <fullName>Started_From__c</fullName>
    <label>Started From</label>
    <type>TextArea</type>
</CustomField>