force-app/main/default/objects/Expense_Line_Item__c/fields/Toll_Plaza_Name__c.field-meta.xml
<CustomField>
    <fullName>Toll_Plaza_Name__c</fullName>
    <label>Toll Plaza Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>