force-app/main/default/objects/Expense_Line_Item__c/fields/Type_of_Expense__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Expense__c</fullName>
    <label>Type of Expense</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel Stay</fullName>
            </value>
            <value>
                <fullName>Self Arrangement</fullName>
            </value>
            <value>
                <fullName>Outstation Travel</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Toll Tax</fullName>
            </value>
            <value>
                <fullName>Parking</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>