force-app/main/default/objects/Expense_Line_Item__c/recordTypes/Entertainment.recordType-meta.xml
<RecordType>
    <fullName>Entertainment</fullName>
    <active>true</active>
    <label>Entertainment</label>
</RecordType>